Ship production farm-ops stack: harvest, CRM, dual-mode connectors, auth.
Add harvest/CRM inventory loops with audit, dashboard KPIs with realized revenue sparklines, dual-mode connectors (local JSON or REST), optional barn roles, PDF reports, L-System visualizer, and demo docs/scripts.